# iot-sensor

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  admin_test_client.py  docker-compose.yml  requirements.txt  security_test_client.py  test_client.py
include/: auth_handler.hpp  sensor_data.hpp  websocket_server.hpp
include/security/: authorization.hpp  dos_protection.hpp  rate_limiter.hpp
src/: auth_handler.cpp  main.cpp  sensor_data.cpp  websocket_server.cpp
src/security/: authorization.cpp  dos_protection.cpp  rate_limiter.cpp
